<resources>
    <string name="app_name">BtnTest</string>
    <string name="title_catalog">Каталог</string>
    <string name="title_constructor">Конструктор</string>
    <string name="title_orders">Заказы</string>
    <string name="title_about">О нас</string>
    <string name="name_width">Ширина</string>
    <string name="name_height">Высота</string>
    <string name="nameItm">Название</string>
    <string name="select_fur">Выберите фурнитуру</string>
    <string name="Create">Создать</string>
    <string name="select_clouth">Выберите ткань</string>
    <string name="select_ocan">Выберите окантовку</string>
</resources>
