<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_catalog"
            android:icon="@android:drawable/ic_menu_compass"
            android:title="@string/title_catalog"/>

    <item
            android:id="@+id/navigation_constructor"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/title_constructor"/>

    <item
            android:id="@+id/navigation_orders"
            android:icon="@android:drawable/ic_menu_directions"
            android:title="@string/title_orders"/>
    <item
            android:id="@+id/navigation_about"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/title_about"/>

</menu>
