<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/navigation_catalog">

    <fragment
            android:id="@+id/navigation_catalog"
            android:name="com.example.btntest.ui.catalog.CatalogFragment"
            android:label="@string/title_catalog"
            tools:layout="@layout/fragment_catalog"/>

    <fragment
            android:id="@+id/navigation_constructor"
            android:name="com.example.btntest.ui.constructor.ConstructorFragment"
            android:label="@string/title_constructor"
            tools:layout="@layout/fragment_constructor"/>

    <fragment
            android:id="@+id/navigation_orders"
            android:name="com.example.btntest.ui.orders.OrdersFragment"
            android:label="@string/title_orders"
            tools:layout="@layout/fragment_orders"/>
    <fragment
            android:id="@+id/navigation_about"
            android:name="com.example.btntest.ui.about.AboutFragment"
            android:label="@string/title_about"
            tools:layout="@layout/fragment_about"/>
</navigation>